--- a/project 77/index.HTML
+++ b/project 77/index.HTML
@@ -5,7 +5,7 @@
         </title>
     </head>
     <body>
-        <h1>Project On Console <br> <br> Write about console screen.And it is us.And how to open console screen and how to print anything on console. </h1>
+        <h1>Project On Console <br> <br> I am Dhipin.I love coding. I like my teacher becouse she helps me in the projects. </h1>
         <script>
             console.log("Hi this is my first console screen");
             var firstname="Dhipin";
